Update Collecting & Parsing Data.ipynb

--- a/Collecting & Parsing Data.ipynb
+++ b/Collecting & Parsing Data.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_key = \"AIzaSyCFig6G8Dv_9lRi4jHSYETD_NsThkEaovY \"\n",
+    "API_key = \"xxxxxxxxxxxxxxxxx \"\n",
     "Channel_ID = 'UCEWpbFLzoYGPfuWUMFPSaoA'"
    ]
   },
